--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.topheader-section .social-links .socialiconbg{
+.topheader-section .social-links .socialiconbg {
     background-color: white;
     position: relative;
     height: 25px;
@@ -7,14 +7,48 @@
     transition: all 0.2s ease-in-out;
 }
 
-.topheader-section .social-links .socialiconbg:hover{
-border-radius: 50px;
+.topheader-section .social-links .socialiconbg:hover {
+    border-radius: 50px;
 }
 
-.topheader-section .social-links .socialiconbg .icon{
-position: absolute;
-top: 53%;
-left: 50%;
-transform: translate(-50%, -50%);
+.topheader-section .social-links .socialiconbg .icon {
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+nav {
+    position: relative;
+z-index: 1111;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+nav .logo {
+    height: 65px;
+    width: 65px;
+}
+
+nav .logo img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+nav .nav_links {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+    z-index: 111111;
+}
+
+
+nav .nav_links a {
+    margin: 5px;
+    padding: 10px;
 
 }
