--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,148 +1,191 @@
-a{
+a {
     color: inherit;
     text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h5{
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: "Kadwa", serif;
     font-style: normal;
 }
 
-a, p, span, li, input, textarea{
+a,
+p,
+span,
+li,
+input,
+textarea {
     font-family: "Red Hat Display", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
 }
 
-.margin-0{
+.margin-0 {
     margin: 0px !important;
 }
 
-.margin-b-0{
+.margin-b-0 {
     margin-bottom: 0px !important;
 }
 
-.text-justify{
+.text-justify {
     text-align: justify !important;
 }
 
 
 
-.font-w-200{
+.font-w-200 {
     font-weight: 200 !important;
 }
 
-.font-w-300{
+.font-w-300 {
     font-weight: 300 !important;
 }
 
-.font-w-400{
+.font-w-400 {
     font-weight: 400 !important;
 }
 
 
-.font-w-500{
+.font-w-500 {
     font-weight: 500 !important;
 }
 
-.font-w-600{
+.font-w-600 {
     font-weight: 600 !important;
 }
 
-.font-w-700{
+.font-w-700 {
     font-weight: 700 !important;
 }
 
-.theme-bg{
+.theme-bg {
     background-color: #d6b981 !important;
 }
 
-.t-color-theme-red{
+.t-color-theme-red {
     color: #a12b2f !important;
 }
 
-.bgcolor-theme-red{
+.bgcolor-theme-red {
     background-color: #a12b2f !important;
     color: white;
 }
 
-.t-color-theme-blue{
-    color: #002f87 !important;
-}
-
-.bgcolor-theme-blue{
-    background-color: #002f87 !important;
-color: white;
-}
-
-.t-color-white{
+.hover-red-btn-white {
+    background-color: #a12b2f;
     color: white;
 }
 
-.t-color-black{
+.hover-red-btn-white:hover {
+    background-color: white;
     color: black;
 }
 
-.t-color-gray{
+.hover-red-btn-white-t-red {
+    background-color: #a12b2f;
+    color: white;
+}
+
+.hover-red-btn-white-t-red:hover {
+    background-color: white;
+    color: #a12b2f;
+}
+
+.transition-2 {
+    transition: all 0.2s ease-in-out;
+}
+
+
+.transition-3 {
+    transition: all 0.3s ease-in-out;
+}
+
+.transition-4 {
+    transition: all 0.4s ease-in-out;
+}
+
+.t-color-theme-blue {
+    color: #002f87 !important;
+}
+
+.bgcolor-theme-blue {
+    background-color: #002f87 !important;
+    color: white;
+}
+
+.t-color-white {
+    color: white;
+}
+
+.t-color-black {
+    color: black;
+}
+
+.t-color-gray {
     color: gray;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
     color: #d6b981;
 }
 
-.t-xsm{
+.t-xsm {
     font-size: 12px;
 }
 
 
-.t-sm{
+.t-sm {
     font-size: 14px;
 }
 
-.t-md{
+.t-md {
     font-size: 16px;
 }
 
 
-.t-lg{
+.t-lg {
     font-size: 18px;
 }
 
 
-.t-xlg{
+.t-xlg {
     font-size: 21px;
 }
 
-.t-xlg{
+.t-xlg {
     font-size: 30px;
 }
 
-.letter-spacing-1{
+.letter-spacing-1 {
     letter-spacing: 1px !important;
 }
 
-.letter-spacing-2{
+.letter-spacing-2 {
     letter-spacing: 2px !important;
 }
 
-.letter-spacing-3{
+.letter-spacing-3 {
     letter-spacing: 3px !important;
 }
 
 
-.b-radius-2{
+.b-radius-2 {
     border-radius: 2px !important;
 }
 
-.b-radius-5{
+.b-radius-5 {
     border-radius: 5px !important;
 }
 
-.b-radius-10{
+.b-radius-10 {
     border-radius: 10px !important;
 }
 
-.b-radius-15{
+.b-radius-15 {
     border-radius: 15px !important;
 }
