footer is pending

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,7 +14,7 @@ h5 {
 
 a,
 p,
-span,
+
 li,
 input,
 textarea {
@@ -131,7 +131,7 @@ textarea {
 
 .swiper-button-next,
 .swiper-button-prev {
-    color: #d6b981;
+    color: #a12b2f !important;
 }
 
 .t-xsm {
@@ -157,8 +157,8 @@ textarea {
     font-size: 21px;
 }
 
-.t-xlg {
-    font-size: 30px;
+.t-xxlg {
+    font-size: 60px;
 }
 
 .letter-spacing-1 {
