--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,9 @@ nav .nav_links a {
     width: 100%;
 }
 .image-title h5{
-    padding: 8px 0px;
+    padding: 12px 0px;
+    font-size: 16px;
+
 }
 .hover-content{
     position: absolute;
@@ -271,4 +273,72 @@ object-position: top;
 background-position: center;
 background-size: cover;
 background-repeat: no-repeat;
+}
+.img-fit{
+    
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+    max-width: 100%;
+    transition: all .3s ease-in-out;
+    overflow: hidden;
+
+}
+.leader-title{
+    position: absolute;
+    bottom: 0;
+    padding: 12px 0px;
+    background-color: #ffffffbe;
+    width: 100%;
+    text-align: center;
+}
+.leadership{
+    background-color: rgb(240, 240, 240);
+    padding: 20px 0px;
+}
+.image-hover-effect:hover .img-fit{
+    transform: scale(1.1);
+    transition: all .3s ease-in-out;
+    overflow: hidden;
+}
+.image-hover-effect{
+    overflow: hidden;
+
+}
+.feeder-school{
+    padding: 25px 0px;
+}
+.girl-image{
+    height: 430px;
+    max-width: 100%;
+    object-fit: cover;
+}
+.school-image{
+    width: 100%;
+    max-width: 100%;
+    transition: all .3s ease-in-out;
+    position: relative;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.shadow1:hover{
+    box-shadow: 2px 2px 8px gray;
+    transition: all .3s ease-in-out;
+}
+.shadow1{
+    transition: all .3s ease-in-out;
+    border-radius: 5px;
+}
+.curri-banner{
+    background-image: url(../img/curriculum-banner.jpg);
+    width: 100%;
+    height:200px;
+    background-position: center;
+    background-size: cover;
+
+}
+.banner-title{
+    color: #a12b2f;
+    -webkit-text-stroke: 1px white;
+    margin-top: 70px;
 }
